Fixed editor alignment issues.

--- a/resources/scss/editor/_controls.scss
+++ b/resources/scss/editor/_controls.scss
@@ -110,3 +110,15 @@ svg.components-checkbox-control__checked {
 .customize-control-dropdown-pages .add-new-toggle {
 	font-size: var(--text-xs);
 }
+
+.block-editor-media-flow__url-input .block-editor-media-replace-flow__image-url-label {
+	font-size: var(--text-xs);
+}
+
+.block-editor-link-control__search-item .block-editor-link-control__search-item-icon {
+	top: 1.5em;
+}
+
+.components-button.block-editor-link-control__search-item-action {
+	align-self: center;
+}
